--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 .content{
-	position: relative;
+	/* position: relative;
 	width: 100%;
 	height: 400px ;
-	background-color: black;
+	background-color: black; */
 }
-#ball{
+.ball{
 	border-radius: 100%;
 	background-color: white;
 	width: 20px;
